<resources>
    <string name="app_name">DormApp</string>
    <string name="add_notice">Add notice</string>
    <string name="post_detail_title">게시글 제목</string>
    <string name="post_detail_content">게시글 내용을 표시합니다.</string>
    <string name="post_image_desc">게시글 이미지</string>
    <string name="button_edit">수정</string>
    <string name="button_delete">삭제</string>
    <string name="comments_label">댓글</string>
    <string name="hint_comment">댓글을 입력하세요</string>
    <string name="button_post_comment">등록</string>
    <string name="title_label">제목: </string>
    <string name="content_label">내용: </string>
    <string name="edit_notice">공지 수정</string>
    <string name="delete_notice">공지 삭제</string>
    <string name="bg_notice_desc">공지 배경 이미지</string>
    <string name="iv_notice_image_desc">공지 이미지</string>
</resources>